--- a/naqlah.client/src/app/Pages/admin/users/captain/edit-captain/edit-captain.component.html
+++ b/naqlah.client/src/app/Pages/admin/users/captain/edit-captain/edit-captain.component.html
@@ -1,5 +1,5 @@
 <div class="min-h-screen bg-neutral-50">
-  <div class="container mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 py-8">
+  <div class="container mx-auto">
     <app-page-header
       title="ADMIN.PAGES.EDIT_CAPTAIN.HEADER_TITLE"
       subtitle="ADMIN.PAGES.EDIT_CAPTAIN.HEADER_SUBTITLE"
@@ -1386,4 +1386,13 @@
       </form>
     </div>
   </div>
+
+  <!-- Confirmation Modal -->
+  <app-confirmation-modal
+    [show]="showConfirmModal"
+    [title]="confirmationTitle"
+    [message]="confirmationMessage"
+    (confirmed)="onConfirmationConfirmed()"
+    (cancelled)="onConfirmationCancelled()"
+  ></app-confirmation-modal>
 
