--- a/naqlah.client/src/app/Pages/admin/users/new-captain/captain-action/captain-action.component.html
+++ b/naqlah.client/src/app/Pages/admin/users/new-captain/captain-action/captain-action.component.html
@@ -976,4 +976,13 @@
       </div>
     </div>
   </div>
+
+  <!-- Confirmation Modal -->
+  <app-confirmation-modal
+    [show]="showConfirmModal"
+    [title]="confirmationTitle"
+    [message]="confirmationMessage"
+    (confirmed)="onConfirmationConfirmed()"
+    (cancelled)="onConfirmationCancelled()"
+  ></app-confirmation-modal>
 </div>
