--- a/naqlah.client/src/app/Pages/admin/users/systme-users/add-employee/add-employee.component.html
+++ b/naqlah.client/src/app/Pages/admin/users/systme-users/add-employee/add-employee.component.html
@@ -45,7 +45,7 @@
               <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
               </svg>
-              <span>اسم المستخدم مطلوب (3 أحرف على الأقل)</span>
+              <span>{{ getFieldError('userName') || 'اسم المستخدم مطلوب (3 أحرف على الأقل)' }}</span>
             </div>
           </div>
 
@@ -75,7 +75,7 @@
               <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
               </svg>
-              <span>الاسم الكامل مطلوب</span>
+              <span>{{ getFieldError('fullName') || 'الاسم الكامل مطلوب' }}</span>
             </div>
           </div>
 
@@ -105,7 +105,7 @@
               <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
               </svg>
-              <span>البريد الإلكتروني مطلوب وصحيح</span>
+              <span>{{ getFieldError('email') || 'البريد الإلكتروني مطلوب وصحيح' }}</span>
             </div>
           </div>
 
@@ -124,18 +124,20 @@
                 id="phoneNumber"
                 type="text"
                 formControlName="phoneNumber"
-                placeholder="+20 100 000 0000"
+                placeholder="05xxxxxxxx"
+                maxlength="10"
                 class="block w-full pr-10 pl-3 py-2.5 border border-neutral-300 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-primary-500 transition-all duration-200 text-sm"
                 [ngClass]="{
                   'border-red-300 focus:ring-red-500 focus:border-red-500': empForm.get('phoneNumber')?.invalid && empForm.get('phoneNumber')?.touched
                 }"
+                (input)="onPhoneInput($event)"
               />
             </div>
             <div *ngIf="empForm.get('phoneNumber')?.invalid && empForm.get('phoneNumber')?.touched" class="flex items-center gap-1.5 text-sm text-red-600">
               <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
               </svg>
-              <span>رقم الهاتف مطلوب</span>
+              <span>{{ getFieldError('phoneNumber') || 'رقم الهاتف مطلوب' }}</span>
             </div>
           </div>
 
@@ -165,7 +167,7 @@
               <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
               </svg>
-              <span>كلمة المرور مطلوبة (4 أحرف على الأقل)</span>
+              <span>{{ getFieldError('password') || 'كلمة المرور مطلوبة (6 أحرف على الأقل)' }}</span>
             </div>
           </div>
 
@@ -209,7 +211,7 @@
               <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 20 20">
                 <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
               </svg>
-              <span>الدور مطلوب</span>
+              <span>{{ getFieldError('roleId') || 'الدور مطلوب' }}</span>
             </div>
           </div>
 
